correccion primera linea

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </a>
 </nav>
 </header>
-<div class="row">
+<div class="row first_line">
 	<div class="col-sm-4 col-md-4 logo">
 		<img src="img/logotipo-01.png" class="img-fluid" width="110px" height="110px" alt="">
 	</div>
