--- a/index.html
+++ b/index.html
@@ -46,29 +46,32 @@
 </nav>
 </header>
 <div class="row first_line">
-	<div class="col-sm-4 col-md-4 logo">
-		<img src="img/logotipo-01.png" class="img-fluid" width="110px" height="110px" alt="">
-	</div>
-	<div class="col-sm-4 col-md-4 texto">
-		<p><b>Contactenos al: +56 2 3232 7871 / 9 7879 1625</b></p>
-	</div>
+	
 </div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-wrap="true">
+  
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/img7.jpg" class="img-fluid foto_carousel" alt="Reparacion">
+      <img src="img/233.jpg" class="img-fluid foto_carousel" alt="Reparacion">
+      <div class="carousel-caption">
+        <img src="img/logotipo-01.png" class="img-fluid" width="160px" height="170px" alt="">
+        <h2>Contactenos al: +56 2 3232 7871 / 9 7879 1625</h2>
+      </div>
     </div>
 
     <div class="item">
-      <img src="img/img8.jpg" class="img-fluid foto_carousel" alt="Instalacion">
+      <img src="img/img1.jpg" class="img-fluid foto_carousel" alt="Instalacion">
+      <div class="carousel-caption">
+        <h2>Construcción y Remodelación</h2>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/img8.jpg" class="img-fluid foto_carousel" alt="Remodelacion">
+      <div class="carousel-caption">
+        <h2>Reparación de Electrodomésticos</h2>
+      </div>
     </div>
 
     <div class="item">
@@ -131,6 +134,7 @@
                             
                         </div>
                     </div>
+                    <hr class="style-two">
                 </div>
               </div>
               <div class="row">
@@ -156,6 +160,7 @@
                             </ul> 
                         </div>
                     </div>
+                    <hr class="style-two">
                 </div>
                 </div>
                 <div class="row">
@@ -186,7 +191,8 @@
                         </div>
                     </div>
                 </div>
-              </div>                                       
+              </div> 
+              <hr class="style-two">                                      
             </div><!--/.row-->
         </div><!--/.container-->
     </section><!--/#services-->
