--- a/index.html
+++ b/index.html
@@ -56,26 +56,27 @@
       <img src="img/233.jpg" class="img-fluid foto_carousel" alt="Reparacion">
       <div class="carousel-caption">
         <img src="img/logotipo-01.png" class="img-fluid" width="160px" height="170px" alt="">
-        <h2>Contactenos al: +56 2 3232 7871 / 9 7879 1625</h2>
+        <h>Contactenos al: +56 2 3232 7871 / 9 7879 1625</h>
       </div>
     </div>
 
     <div class="item">
       <img src="img/img1.jpg" class="img-fluid foto_carousel" alt="Instalacion">
       <div class="carousel-caption">
-        <h2>Construcción y Remodelación</h2>
+        <h3>Construcción y Remodelación</h3>
       </div>
     </div>
 
     <div class="item">
-      <img src="img/img8.jpg" class="img-fluid foto_carousel" alt="Remodelacion">
+      <img src="img/img7.jpg" class="img-fluid foto_carousel" alt="Remodelacion">
+      
+    </div>
+
+    <div class="item">
+      <img src="img/img8.jpg" class="img-fluid foto_carousel" alt="Reparacion">
       <div class="carousel-caption">
-        <h2>Reparación de Electrodomésticos</h2>
+        <h3>Instalacion de Equipos del Hogar</h3>
       </div>
-    </div>
-
-    <div class="item">
-      <img src="img/img7.jpg" class="img-fluid foto_carousel" alt="Reparacion">
     </div>
 
   <!-- Left and right controls -->
