--- a/index.html
+++ b/index.html
@@ -48,17 +48,24 @@
 <div class="row first_line">
 	
 </div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-wrap="true">
-  
+<div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel" data-wrap="true">  
+  <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
       <img src="img/233.jpg" class="img-fluid foto_carousel" alt="Reparacion">
       <div class="carousel-caption">
         <img src="img/logotipo-01.png" class="img-fluid" width="160px" height="170px" alt="">
-        <h>Contactenos al: +56 2 3232 7871 / 9 7879 1625</h>
+        <h3>Contactenos al: +56 2 3232 7871 / 9 7879 1625</h3>
       </div>
     </div>
+
 
     <div class="item">
       <img src="img/img1.jpg" class="img-fluid foto_carousel" alt="Instalacion">
@@ -295,7 +302,7 @@
 
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<script src="js/wow.js"></script>
 		<script src="js/main.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108193078-1"></script>
