--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- El logotipo y el icono que despliega el menú se agrupan
        para mostrarlos mejor en los dispositivos móviles -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+    <button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Desplegar navegación</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -48,7 +48,7 @@
 <div class="row first_line">
 	
 </div>
-<div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel" data-wrap="true">  
+<div id="myCarousel" class="carousel slide" data-interval="4000" data-ride="carousel" data-wrap="true">  
   <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
