--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="row first_line">
 	
 </div>
-<div id="myCarousel" class="carousel slide" data-interval="4000" data-ride="carousel" data-wrap="true">  
+<div id="myCarousel" class="carousel slide" data-interval="4000" data-ride="carousel" data-wrap="true" data-pause="hover">  
   <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
