--- a/index.html
+++ b/index.html
@@ -13,38 +13,44 @@
 	</head>
 	<body>
 		<!-- header start -->
-<header class="navbar navbar-fixed-top">
-	<nav class="navbar navbar-default" role="navigation">
-  <!-- El logotipo y el icono que despliega el menú se agrupan
-       para mostrarlos mejor en los dispositivos móviles -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Desplegar navegación</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-  </div>
- 
-  <!-- Agrupar los enlaces de navegación, los formularios y cualquier
-       otro elemento que se pueda ocultar al minimizar la barra -->
-  <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
-    <ul class="nav navbar-nav">
-      <li class=""><a href="index.html">Home</a></li>
-      <li><a href="#feature">Acerca de Nosotros</a></li>
-      <li><a href="#services">Servicios</a></li>
-      <li><a href="#contact-info">Contacto</a></li>
-    </ul>
-    </div>
-    <!-- whatsapp test -->
+    <!-- header start -->
+    <header id="home" class="navbar navbar-fixed-top">
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+              </div>
+            </div>
+            <div class="col-sm-8">
+              <!-- Collect the nav toggling -->
+              <div class="collapse navbar-collapse navbar-right navbar-example" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                   <li><a href="index.html">Home</a></li>
+                  <li><a href="#feature">Acerca de nosotros</a></li><!-- CAMBIAR ID -->
+                  <li><a href="#services">Servicios</a></li>
+                  <li><a href="#contact-info">Contacto</a></li>
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </div>
+        </div>
+      </nav>
+      <!-- whatsapp test -->
         <a href="https://api.whatsapp.com/send?phone=56978791625&text=Hola%2C%20deseo%20contratar%20un%20servicio%20con%20ustedes" class="back-to-top" target="_blank" style="display: inline;">
           <img src="img/WhatsApp_Logo_4.png" alt="" height="40px" width="40px">
           <br>
           <span>Escribenos</span>
           
         </a>
-</nav>
-</header>
+    </header>
+    <!-- header end -->
 <div class="row first_line">
 	
 </div>
