--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
             <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
         </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
       <img src="img/233.jpg" class="img-fluid foto_carousel" alt="Reparacion">
       <div class="carousel-caption">
-        <img src="img/logotipo-01.png" class="img-fluid" width="290px" height="150px" alt="">
+        <img src="img/logotipo-01.png" class="img-fluid" width="320px" height="150px" alt="">
         <h3>Contactenos al: +56 2 3232 7871 / 9 7879 1625</h3>
       </div>
     </div>
@@ -89,6 +90,13 @@
       <img src="img/img8.jpg" class="img-fluid foto_carousel" alt="Reparacion">
       <div class="carousel-caption">
         <h3>Instalacion de Equipos del Hogar</h3>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/vigilancia.jpg" class="img-fluid foto_carousel" alt="CCTV">
+      <div class="carousel-caption">
+        <h3>Instalación de Cámaras y CCTV</h3>
       </div>
     </div>
 
@@ -193,15 +201,16 @@
                               <li>Persianas y Cortinas</li>
                               <li>Alfombras</li>
                               <li>Lamparas y Muebles</li>
+                              <li>Cámaras y CCTV</li>
                             </ul>
                             <ul class=" col-sm-6 col-md-6">
+                              <li>Control de Acceso</li>
                               <li>Soportes de TV</li>
                               <li>Mallas de Seguridad</li>
                               <li>Artefactos Electrodomésticos</li>
                               <li>Aires Acondicionados</li>
                               <li>Campanas y Extractores.</li>
                             </ul>
-                    
                         </div>
                     </div>
                 </div>
