--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="item active">
       <img src="img/233.jpg" class="img-fluid foto_carousel" alt="Reparacion">
       <div class="carousel-caption">
-        <img src="img/logotipo-01.png" class="img-fluid" width="320px" height="150px" alt="">
+        <img src="img/logotipo-01.png" class="img-fluid" width="320px" height="150px" alt="Decohogar">
         <h3>Contactenos al: +56 2 3232 7871 / 9 7879 1625</h3>
       </div>
     </div>
@@ -133,7 +133,7 @@
                 <div class="col-sm-10 col-md-10 col-md-offset-1 col-sm-offset-1" align="center">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="foto">
-                            <img class="img-responsive" src="img/img5.jpg" height="240px" width="380px">
+                            <img class="img-responsive" src="img/img5.jpg" height="240px" width="380px" alt="Construccion y Reparacion">
                         </div>
                 </div>
                 <div class="row">
@@ -163,7 +163,7 @@
                 <div class="col-sm-10 col-md-10 col-md-offset-1 col-sm-offset-1" align="center">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="foto">
-                            <img class="img-responsive" src="img/img3.jpg" height="240px" width="360px">
+                            <img class="img-responsive" src="img/img3.jpg" height="240px" width="360px" alt="reparacion y mantencion">
                         </div>
                 </div>
                 <div class="row">
@@ -189,7 +189,7 @@
                 <div class="col-sm-10 col-md-10 col-md-offset-1 col-sm-offset-1" align="center">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="foto">
-                            <img class="img-responsive" src="img/img6.jpg" height="300px" width="360px">
+                            <img class="img-responsive" src="img/img6.jpg" height="300px" width="360px" alt="instalaciones">
                         </div>
                       </div>
                       <div class="row">
